Typo in i3 config - change -> chance

--- a/dotfiles/common/.config/i3/config
+++ b/dotfiles/common/.config/i3/config
@@ -147,6 +147,6 @@ bindsym $mod+l exec bin/i3lockwrapper
 exec --no-startup-id 'cd "${HOME}" && nitrogen --restore'
 
 # Compton has to be loaded here on a sleep, just enough to ensure i3 has a
-# change to load the layout. This is to prevent races where it seems that the
+# chance to load the layout. This is to prevent races where it seems that the
 # layout is launched too early for Compton to see the windows that are loaded.
 exec --no-startup-id "sleep 8 && compton --shadow-opacity=0 --backend glx --vsync opengl-swc"
